<resources>
    <string name="app_name">Laila</string>
    <string name="by_aditum_health">By Aditum Health</string>
    <string name="aditum_health">Aditum Health</string>
    <string name="version_no">Version 1 (Build 1.1)</string>
    <string name="login">Login</string>
    <string-array name="from_type">
        <item>Teaspoon</item>
        <item>Tablet</item>
        <item>Capsule</item>
        <item>Drops</item>
        <item>Injection</item>
        <item>Inhaler</item>
    </string-array>
    <string name="gender">Gender</string>
    <string-array name="blood">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="organ_donar">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="strength_unit">Strength Unit</string>
    <string-array name="weight_unit">
        <item>Kg</item>
        <item>Lbs</item>
    </string-array>
    <string-array name="height_unit">
        <item>Feet</item>
        <item>Inches</item>
    </string-array>
    <string name="frequency">Frequency</string>
    <string name="google_map_api">AIzaSyAapkSK-4W1lWRzxKHtfmmbjTP3HPB4ij0</string>
    <string name="Network_not_available">Network Not Available</string>
    <string name="Network_error">Network Error</string>
    <string name="facebook_app_id">2956445277814614</string>
    <string name="fb_login_protocol_scheme">fb2956445277814614</string>
    <string name="question_one_heading">What is Lorem Lpsum?</string>
    <string name="question_one_description">Ipsum is simply dummy text of the printing
                   and typesetting industry. Lorem Ipsum has
                   been the industry\'s standard dummy text
                   ever since the 1500s.</string>
    <string name="question_two_heading">Why do we use it?</string>
    <string name="question_two_description">Ipsum is simply dummy text of the printing
                   and typesetting industry. Lorem Ipsum has
                   been the industry\'s standard dummy text
                   ever since the 1500s.</string>
    <string name="question_three_heading">Where can I get some?</string>
    <string name="question_three_description">Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.
    </string>
    <string name="stripe_public_key">Stripe public key</string>
    <string name="stripe_secret_key">Stripe secret key</string>
    <string name="paste_key_here">paste key here</string>
    <string name="payment_detail">Payment</string>
    <string name="how_to_use_1">• Create your stripe account by clicking on  &lt;a href="https://dashboard.stripe.com/register"&gt;SignUp now&lt;/a&gt;</string>
    <string name="how_to_use_2">• After successfull signup login your account and open dashboard after that click on Developers and open ApiKeys page </string>
    <string name="how_to_use_3">• Copy and paste stripe key and update your Stripe keys</string>
    <string name="stripe_payment_detail">Stripe Payment Detail</string>
    <string name="invalid_public_key">Public key is invalid</string>
    <string name="invalid_secret_key">Secret key is invalid</string>
    <string name="stripe_detail_updated">Stripe detail updated</string>
    <string name="Payment_completed">Payment Completed</string>
    <string name="Payment_failed">Payment Failed</string>
    <string name="payment_succeeded">Payment Succeeded</string>
    <string name="success_delete_alarm">Successfully deleted the alarm.</string>
    <string name="success">Success!</string>
    <string name="delete_medication">Delete Medication Successfully!</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_after_noon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="medication_type">Type</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="intake_time">Intake Time</string>
    <string name="information">Information</string>
    <string name="information_not_available">Medication information is not available. Please contact your pharmacist for details</string>
    <string name="detail_information">Detail Information</string>
    <string name="drug_interaction">Drug Interactions</string>
    <string name="delete_item">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="alert">Alert</string>
    <string name="start_date_less_then_end_date">Start date should be less then end date</string>
    <string name="failed_information">we were unable to find any ingredients for this drug.</string>
    <string name="allergies_delete">Delete allergies</string>
    <string name="condition_delete">Delete condition</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="remind_later">Remind me later</string>
    <string name="dismiss">Not Taken</string>
    <string name="taken">Taken</string>
    <string name="thank_you">Thank You</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="view_interactions">Check Interactions</string>
    <string name="login_error">Login error</string>
    <string name="email_required">Email is required. \nYour Account  is not associated with email. Please try another account</string>
    <string name="user_signup">User Signed-up successfully\nPlease verify your email and Signin again</string>
    <string name="add_contact">You can"'"t add more then two contacts</string>
    <string name="signup_successful">User Signed-up successfully \nPlease Signin again</string>
    <string name="invalid_email">Invalid email</string>
    <string name="already_paid">You have already disabled ads.</string>
    <string name="password_must_be__character">Password must be 8 characters long</string>
    <string name="new_password_must_be__character">New password must be 8 characters long</string>
    <string name="confirm_password_must_be__character">Confirm password must be 8 characters long</string>
    <string name="current_password_must_be__character">Current password must be 8 characters long</string>
    <string name="password_required">Password is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="confirm_password_required">Confirm password is required</string>
    <string name="current_password_required">Current password is required</string>
    <string name="new_password_required">New password is required</string>
    <string name="internet_not_vailable">Internet not available</string>
    <string name="api_error">API error</string>
    <string name="no_internet">No internet</string>
    <string name="time_inyerval_format_template">%1$s to %2$s</string>
    <string name="error">Error</string>
    <string name="n_a">N/A</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="required">Required</string>
    <string name="phone_check">Phone number must have 10 digit</string>
    <string name="phone_digit">Phone Number contain digit only</string>
    <string name="password_not_match">Password does not matched!</string>
    <string name="new_and_confirm_password_not_match">New passwords do not match with confirm password!</string>
    <string name="loading">Loading...</string>
    <string name="total_ammout_template">$ %1$s</string>
    <string name="please_wait_nyour_payment_is_processing">Please wait\npayment is processing</string>
    <string name="card_is_invalid">Card is invalid</string>
    <string name="skip_text">Skip</string>
    <string name="next_text">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="ingredient">Ingredients</string>
    <string name="love_one">Love One</string>
    <string name="emergency_contact">Emergency Contacts</string>
    <string name="emergency_contact_added">Emergency contact added successfully!</string>
    <string name="contact_added">Contact added successfully!</string>
    <string name="last_name">Last Name</string>
    <string name="email_phone">Email </string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="term_and_policy">I accept terms and conditions</string>
    <string name="remember_me">Remember Me</string>
    <string name="already_have_an_account">Already have account?</string>
    <string name="signin_link">Sign in here</string>
    <string name="signin">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_notification">Notifications</string>
    <string name="amount">Amount</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="weight">Weight</string>
    <string name="height">Height </string>
    <string name="channel_name" translatable="false">Simple Alarms</string>
    <string name="home_second">Home Second</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_reminder">Reminder</string>
    <string name="menu_setting">Setting</string>
    <string name="event_title">Enter Event Title</string>
    <string name="menu_logout">Logout</string>
    <string name="logout">Are you sure you want to Logout?</string>
    <string name="take_medicine">Its time to take medicine. \nPlease take your medicine</string>
    <string name="medication">Medication</string>
    <string name="medication_title">Medications</string>
    <string name="payment_information">Payment Information</string>
    <string name="calender">Calendar</string>
    <string name="add_medication">Add Medication</string>
    <string name="or">Or</string>
    <string name="medication_add_manually">Add Manually</string>
    <string name="din_number">Din Number</string>
    <string name="medication_search_by_rx_number">Search by din number</string>
    <string name="allergies">Allergies</string>
    <string name="friends">Friends</string>
    <string name="enter_name">Please enter name of </string>
    <string name="contacts">Contacts</string>
    <string name="family_doctor">Family Doctor</string>
    <string name="add_your_doctor_name">Add your doctor name</string>
    <string name="specialist">Specialist Contacts</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="add_your_pharmacy_name">Add your pharmcy name</string>
    <string name="family">Family</string>
    <string name="add_family_member_name">Add any family member name</string>
    <string name="add_friends_name">Add friends name</string>
    <string name="add_contact_number">Add contact number</string>
    <string name="primary_care_giver">Primary care giver</string>
    <string name="primary_care_giver_name">Primary care giver name</string>
    <string name="primary_care_giver_contact">Primary care giver contact</string>
    <string name="emergency_contact_name">Emergency contact name</string>
    <string name="emergency_contact_number">Emergency contact number</string>
</resources>