<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.AddMedicationsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:theme="@style/ToolbarTheme">

                <TextView
                    android:id="@+id/tv_create_account_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sfpro_display_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/contacts"
                    android:textAlignment="center"
                    android:textColor="@color/darkBlue"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="@font/helveticaneueltpro_roman"
                        android:text="@string/family_doctor"
                        android:textColor="@color/text_blue"
                        android:textSize="14sp" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/doctor_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/add_your_doctor_name"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/gray" />

                     <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="@font/helveticaneueltpro_roman"
                        android:text="@string/specialist"
                        android:textColor="@color/text_blue"
                        android:textSize="14sp" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/specialist_doctor_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/add_your_doctor_name"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/gray" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="@font/helveticaneueltpro_roman"
                        android:text="@string/pharmacies"
                        android:textColor="@color/text_blue"
                        android:textSize="14sp" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pharmacy_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/add_your_pharmacy_name"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/gray" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="@font/helveticaneueltpro_roman"
                        android:text="@string/family"
                        android:textColor="@color/text_blue"
                        android:textSize="14sp" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/family_member_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/add_family_member_name"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/gray" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/family_member_contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/add_contact_number"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="@font/helveticaneueltpro_roman"
                        android:text="@string/friends"
                        android:textColor="@color/text_blue"
                        android:textAllCaps="false"
                        android:textSize="14sp" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/friends_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/add_friends_name"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/gray" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/friends_contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/add_contact_number"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="@font/helveticaneueltpro_roman"
                        android:text="@string/primary_care_giver"
                        android:textColor="@color/text_blue"
                        android:textSize="14sp" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/care_giver_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/primary_care_giver_name"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/gray" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/care_giver_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/primary_care_giver_contact"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="@font/helveticaneueltpro_roman"
                        android:text="@string/emergency_contact"
                        android:textColor="@color/text_blue"
                        android:textSize="14sp" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emergency_contact_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/emergency_contact_name"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/gray" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emergency_contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/emergency_contact_number"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/gray" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_medication"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/green"
                        android:elevation="4dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto_regular"
                        android:padding="16dp"
                        android:text="@string/add_medication"
                        android:textColor="@color/white"
                        app:cornerRadius="6dp" />


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>


    </LinearLayout>
</layout>
