<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context="com.aditum.fragments.RxNumberFragment">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_display_regular"
            android:text="@string/din_number"
            android:textColor="@color/darkBlue"
            android:textSize="16dp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/rx_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableRight="@drawable/ic_search"
                android:fontFamily="@font/helveticaneueltpro_roman"
                android:hint="@string/medication_search_by_rx_number"
                android:paddingHorizontal="2dp"
                android:paddingVertical="10dp"
                android:textColorHint="@color/textHintColor"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/loading_indicator"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="32dp"
                android:elevation="8dp"
                android:indeterminate="true"
                android:progressTint="@color/black"
                android:visibility="gone" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sfpro_display_regular"
            android:text="@string/or"
            android:textColor="@color/textHintColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/add_manually_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableRight="@drawable/ic_navigate_next"
            android:fontFamily="@font/sfpro_display_regular"
            android:paddingVertical="4dp"
            android:text="@string/medication_add_manually"
            android:textColor="@color/darkBlue"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="2dp"
            android:background="@color/gray" />
    </LinearLayout>
</layout>