<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alergy_condition_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneueltpro_roman"
                android:text="@string/allergies"
                android:textColor="@color/darkBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:fontFamily="@font/helveticaneueltpro_roman"
                android:text="@string/name"
                android:textColor="@color/darkBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneueltpro_roman"
                android:text="@string/enter_name"
                android:textColor="@color/darkBlue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/alergy_condition_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:fontFamily="@font/helveticaneueltpro_roman"
                android:text="@string/name"
                android:textColor="@color/darkBlue"
                android:textSize="18sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/enter_alergies_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

    </LinearLayout>
</layout>